5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3858/executions/1679_1099.log
== SUBMITION (2019-05-02 09:02:30) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = float(input("digite o lado a: "))
b = float(input("digite o lado b: "))
c = float(input("digite o lado c: "))

if(a<(b+c) and b<(a+c) and c<(b+a)):
	if(a==b and b==c and c==a):
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo:", equilatero)
	elif(a==b or b==c or c==a):
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo:", isosceles)
	else:
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo:", escaleno)
	
else:
	print("Entradas:", a, ",", b, ",", c)
	print("Tipo de triangulo:", invalido)

-- EXECUTION TIME:
0.207298
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1679/1099/main.py", line 13, in <module>
    print("Tipo de triangulo:", isosceles)
NameError: name 'isosceles' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 09:04:11) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
a = float(input("digite o lado a: "))
b = float(input("digite o lado b: "))
c = float(input("digite o lado c: "))

if(a<(b+c) and b<(a+c) and c<(b+a)):
	if(a==b and b==c and c==a):
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo: equilatero")
	elif(a==b or b==c or c==a):
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo: isosceles")
	else:
		print("Entradas:", a, ",", b, ",", c)
		print("Tipo de triangulo: escaleno")
	
else:
	print("Entradas:", a, ",", b, ",", c)
	print("Tipo de triangulo: invalido")

-- EXECUTION TIME:
0.148581
-- TEST CASE 1:
---- input:
2
4
4
---- correct output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
---- user output:
Entradas: 2.0 , 4.0 , 4.0
Tipo de triangulo: isosceles
-- TEST CASE 2:
---- input:
3.3
4.4
5.5
---- correct output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
---- user output:
Entradas: 3.3 , 4.4 , 5.5
Tipo de triangulo: escaleno
-- TEST CASE 3:
---- input:
1
2
7
---- correct output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
---- user output:
Entradas: 1.0 , 2.0 , 7.0
Tipo de triangulo: invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
